Overflow resolved..

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,7 +61,7 @@
 
 body {
   background-color: #f2f6fb;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 a {
